test/TestSuite/Syntax/Errors/no_csv_suffix.tjp
project test "Test" "1.0" 2007-08-19 +2m 

task t "T" {
  start 2007-08-19
}

# MARK: error 8 no_csv_suffix
csvtaskreport "report.foo" {
}

